Created Jobs and Triggers
created simple/cron triggers for jobs