@@ -26,6 +26,7 @@
         <nocode-flatmap-util-version>1.3.0</nocode-flatmap-util-version>
         <spotless.version>2.40.0</spotless.version>
         <palantir-java.format.version>2.61.0</palantir-java.format.version>
+        <mockito.version>5.10.0</mockito.version>
     </properties>
     <dependencies>
         <dependency>
@@ -281,6 +282,22 @@
                             <tag>${project.version}</tag>
                         </tags>
                     </to>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
